
	* MapFactory is now thread safe.
	* Added pirate job advancement NPC.
	* Added scripts to get players out of 2nd job advancement challenge maps.
	* Each player doing a 2nd job advancement challenge now gets his own
	instance of the map. events/change_job.js handles this for us.

2012-09-16  GoldenKevin  (revision 136)

	* Refactoring to reduce nesting in InterChannelCommunication and
	GameCenterPacketProcessor. Only methods in that class get large enough that
	early out (return in methods, continue in loops) can significantly reduce
	the maximum level of indentation compared to single-entry single-exit.
	* Calls to CenterServer.getAllServersOfWorld in GameCenterPacketProcessor
	moved to outer loop whenever applicable because repeatedly calling that in
	an inner loop is more expensive than getting the other Collection.

2012-09-17  GoldenKevin  (revision 137)

	* Support for the newest Kvj format.
	* Stubs for remaining Henesys area NPCs.
	* Stubs for several event NPCs.
	* Added Florina Beach NPC.
	* Added NimaKIN and KIN NPCs.
	* Fixed any possibility of client crash when choosing new eyes or hair.

2012-09-17  GoldenKevin  (revision 138)

	* Added remaining Nautilus Harbor NPCs to complete Victoria Island NPC
	scripts.

2012-09-18  GoldenKevin  (revision 139)

	* Updated some NPC scripts after consulting DelphiMS scripts.
	* Updated several scripts so they are based on the more accurate Vana
	scripts rather than those from KiniroMS.
	* Updated some scripts that multiple NPCs share.
	* Added a missing Maple Island script. Peter (NPC 2002) is also in the WZ
	files, but v0.62 doesn't have Mushroom Town so I didn't include him.
	* Vana consulted scripts have their documentation changed to read r3171
	instead of r2111 if applicable (cny no longer exist in r3171, so it is left
	as r2111).

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.